# zxd-1

./: .gitignore  README.md  large_ignore.sh
Alpha Chess/alpha_chess/Player 1 VS Player 6/: Game 11.txt  Game 12.txt  Game 13.txt  Game 14.txt  Game 15.txt  Game 17.txt  Game 19.txt  Game 2.txt  Game 21.txt  Game 22.txt  Game 23.txt  Game 26.txt  Game 27.txt  Game 28.txt  Game 3.txt  Game 32.txt  Game 34.txt  Game 4.txt  Game 5.txt  Game 7.txt  Game 9.txt
Alpha Chess/alpha_chess/Player 2 VS Player 3/: Game 1.txt
File System/code/step2/: makefile
File System/code/step3/: makefile
File System/report/: report.tex
File System/report/.texpadtmp/: report.aux  report.toc
Image segmentation of macular lesions/: 使用说明文档.md  比赛排名结果.csv
Image segmentation of macular lesions/项目工程文件/deeplab/: PreConert.py  annotation.py  rank.py
MIPS multi-cycle pipelined processor/code/lab05/: Single_Cycle_CPU_tb_behav.wcfg
Problem Solving and GUI in c++ & fltk/code/Ex10-1/: CMakeLists.txt  MyClass.cpp  MyClass.h  main.cpp
Problem Solving and GUI in c++ & fltk/code/Ex11-1/: main.cpp
Problem Solving and GUI in c++ & fltk/fltk/W12/: poly.cpp  (+2 more)
Ray Tracer/raytracer/: BVH.cpp  BoundingBox.cpp  CMakeLists.txt  Material.cpp  Mesh.cpp  Object.cpp  Ray.cpp  Renderer.cpp  Scene.cpp
Ray Tracer/raytracer/lib/: BoundingBox.hpp  Intersection.hpp  Mesh.hpp  Ray.hpp  Scene.hpp
人工智能Alpha Chess/alpha_chess/: example.py
人工智能Alpha Chess/player_6/: utils.py
体系结构实验/实验指导/: Mips指令集.html
体系结构实验（verilog）/实验指导/: 学生名单(2).xls
光线追踪/raytracer/: Vector.cpp  main.cpp
黄斑病变病灶图像分割/task2best/: model.py
(+527 files in other folders)
